--- a/styles/style.css
+++ b/styles/style.css
@@ -311,7 +311,8 @@
   padding: 0 20px;
   gap: 4px;
 }
-.cybersecurity-bootcamp main > form > div input, .cybersecurity-bootcamp main > form > div select {
+.cybersecurity-bootcamp main > form > div input,
+.cybersecurity-bootcamp main > form > div select {
   background-color: rgba(0, 0, 0, 0.164);
   border: 1px solid #9a20aa;
   padding: 20px;
@@ -322,16 +323,22 @@
 .cybersecurity-bootcamp main > form > div option {
   color: black;
 }
-.cybersecurity-bootcamp main > form > button {
+.cybersecurity-bootcamp main > form > .submit label {
+  opacity: 0;
+}
+.cybersecurity-bootcamp main > form > .submit button {
   background-color: #9a20aa;
   color: white;
+  cursor: pointer;
   width: -moz-fit-content;
   width: fit-content;
   border-radius: 50px;
   border: 0;
   font-size: 20px;
-  margin: 20px auto;
   padding: 10px 50px;
+  height: -moz-fit-content;
+  height: fit-content;
+  margin: auto;
 }
 .cybersecurity-bootcamp .background {
   position: fixed;
