--- a/styles/style.scss
+++ b/styles/style.scss
@@ -262,7 +262,7 @@
         flex-wrap: wrap;
         > div {
           @media screen and (min-width: 640px) {
-            width: 30%;            
+            width: 30%;
           }
           display: flex;
           align-items: center;
@@ -294,7 +294,7 @@
     }
     > form {
       display: grid;
-      
+
       @media screen and (min-width: 640px) {
         grid-template-columns: repeat(2, 1fr);
       }
@@ -304,7 +304,8 @@
         flex-direction: column;
         padding: 0 20px;
         gap: 4px;
-        input,select {
+        input,
+        select {
           background-color: rgba(0, 0, 0, 0.164);
           border: 1px solid #9a20aa;
           padding: 20px;
@@ -313,20 +314,26 @@
 
           font-size: 16px;
         }
-        option{
+        option {
           color: black;
         }
       }
-      >button{
-        background-color: #9a20aa;
-        color: white;
-
-        width: fit-content;
-        border-radius: 50px;
-        border: 0;
-        font-size: 20px;
-        margin: 20px auto;
-        padding: 10px 50px;
+      > .submit {
+        label {
+          opacity: 0;
+        }
+        button {
+          background-color: #9a20aa;
+          color: white;
+          cursor: pointer;
+          width: fit-content;
+          border-radius: 50px;
+          border: 0;
+          font-size: 20px;
+          padding: 10px 50px;
+          height: fit-content;
+          margin: auto;
+        }
       }
     }
   }
@@ -339,11 +346,11 @@
     object-fit: cover;
     z-index: -1;
   }
-  .my-20{
+  .my-20 {
     padding-top: 80px;
     padding-bottom: 80px;
   }
-  .mb-20{
+  .mb-20 {
     padding-bottom: 80px;
   }
 }
