--- a/styles/style.scss
+++ b/styles/style.scss
@@ -50,6 +50,7 @@
         white-space: nowrap;
         font-weight: 500;
         h2 {
+          line-height: 1;
           background-color: #f5bd2d;
           width: fit-content;
           color: #43004f;
@@ -168,9 +169,15 @@
     .sections {
       overflow: hidden;
       > section {
+        @media screen and (min-width: 1024px) {
+          width: calc(100% - 200px);
+        }
+        margin: 0 auto;
         padding: 40px;
+        padding-left: 100px;
         @media screen and (min-width: 640px) {
           padding: 50px;
+          padding-left: 100px;
         }
         position: relative;
         border-radius: 100px;
@@ -202,6 +209,26 @@
           position: absolute;
           border-radius: 100px;
           height: 100%;
+        }
+        .section-img{
+          position: absolute;
+          width: 140px;
+          height: 140px;
+          left: 0;
+          top: 50%;
+          display: none;
+          @media screen and (min-width: 1024px) {
+            display: flex;
+          }
+          align-items: center;
+          img{
+            width: 100%;
+          }
+          border: 1px solid #9a20aa;
+          padding: 20px;
+          border-radius: 50%;
+          background-color: #161521;
+          transform: translate(-50%, -50%);
         }
       }
       > section:nth-child(odd):not(:first-child) {
