--- a/styles/style.css
+++ b/styles/style.css
@@ -309,6 +309,31 @@
 .cybersecurity-bootcamp main .register-details > div:nth-child(1) > div img {
   width: 40px;
 }
+.cybersecurity-bootcamp main .register-details > div:nth-child(1) > div:nth-last-child(1) {
+  position: relative;
+}
+@media screen and (max-width: 400px) {
+  .cybersecurity-bootcamp main .register-details > div:nth-child(1) > div:nth-last-child(1) > p {
+    position: absolute;
+    margin-top: 0px !important;
+    left: -5px;
+    width: 200px;
+    transform: translateX(-100%);
+  }
+}
+@media screen and (min-width: 640px) {
+  .cybersecurity-bootcamp main .register-details > div:nth-child(1) > div:nth-last-child(1) {
+    width: -moz-max-content;
+    width: max-content;
+  }
+}
+.cybersecurity-bootcamp main .register-details > div:nth-child(1) > div:nth-last-child(1) > div {
+  white-space: nowrap;
+}
+.cybersecurity-bootcamp main .register-details > div:nth-child(1) > div:nth-last-child(1) > p {
+  margin-top: 15px;
+  color: #f5bd2d;
+}
 .cybersecurity-bootcamp main .register-details > div:nth-child(2) {
   display: flex;
   flex-direction: column;
@@ -399,7 +424,7 @@
   left: 50%;
   transform: translateX(-50%);
   margin: auto;
-  background-color: #CCCCCC;
+  background-color: #cccccc;
   display: none;
   flex-direction: column;
   align-items: center;
