--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3,7 +3,11 @@
   margin: 0;
   box-sizing: border-box;
 }
-
+@property --p {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 10%;
+}
 .cybersecurity-bootcamp {
   font-family: "Noto Sans Arabic", sans-serif;
   font-optical-sizing: auto;
@@ -107,6 +111,59 @@
       }
     }
   }
+
+  // .test {
+  //   // position: fixed;
+  //   // top: 5vh;
+  //   // left: 50vw;
+
+  //   .chart-circle:hover,
+  //   .chart-circle:hover > .chart-indicator {
+  //     --p: 80%;
+  //   }
+
+  //   .chart-circle,
+  //   .chart-indicator {
+  //     width: var(--size);
+  //     aspect-ratio: 1;
+  //     transition: --p 2s linear;
+  //   }
+  //   .chart-circle {
+  //     --size: 200px;
+  //     border-radius: 50%;
+  //     --p: 10%; /*fallback*/
+  //     background: conic-gradient(
+  //       red calc(-60% + var(--p)),
+  //       rgb(224, 187, 77) var(--p),
+  //       #eee 0
+  //     );
+  //     position: relative;
+  //     margin: auto;
+  //     cursor: progress;
+  //   }
+  //   .chart-indicator {
+  //     --size: min-content;
+  //     offset: path("M -10,0 a 100 100 0 1 1 -.1 0 z");
+  //     offset-distance: var(--p);
+  //     font: 43pt serif;
+  //     transform: rotateY(180deg) translateX(-6px);
+  //   }
+  //   .chart-circle::before {
+  //     position: absolute;
+  //     inset: 20px;
+  //     content: "Going ten to eigthy percent";
+  //     text-align: center;
+  //     padding: 50px;
+  //     font: italic 9pt "Enriqueta";
+  //     border-radius: inherit;
+  //     background: white;
+  //   }
+  //   figcaption {
+  //     text-align: center;
+  //     margin-top: 40px;
+  //     font: 12pt "Enriqueta";
+  //   }
+  // }
   main {
     position: relative;
     color: white;
@@ -119,8 +176,9 @@
         color: white;
         font-size: 16px;
         margin: 0 auto;
-        padding: 10px 30px;
-        border-radius: 10px;
+        line-height: 1;
+        padding: 15px 30px;
+        border-radius: 25px;
         @media screen and (min-width: 640px) {
           font-size: 20px;
         }
@@ -234,6 +292,7 @@
         .double-arrow {
           display: block;
           transform: scaleX(-1) translate(-50%, -50%);
+          animation: moveAlongBorder 5s 3s linear infinite;
         }
       }
       > section:nth-child(odd) {
@@ -251,6 +310,7 @@
       > section:nth-of-type(even) {
         .double-arrow {
           display: block;
+          animation: moveAlongBorder2 5s ease-in-out infinite;
         }
         &::before {
           width: calc(100% - 100px);
@@ -320,7 +380,7 @@
       > div:nth-child(2) {
         display: flex;
         flex-direction: column;
-        h4{
+        h4 {
           text-align: center;
           font-size: 20px;
         }
@@ -335,7 +395,7 @@
             line-height: 1;
             font-size: 26px;
             height: fit-content;
-            span span{
+            span span {
               font-size: 18px;
             }
             img {
@@ -389,7 +449,8 @@
           width: fit-content;
           border-radius: 50px;
           border: 0;
-          font-size: 20px;
+          font-size: 22px;
+          font-weight: 500;
           padding: 10px 50px;
           height: fit-content;
           margin: auto;
@@ -442,5 +503,38 @@
   }
   .mb-20 {
     padding-bottom: 80px;
+  }
+}
+@keyframes moveAlongBorder {
+  0% {
+    width: 0;
+    top: 0;
+    left: calc(100% - 100px);
+  }
+  20%,
+  80% {
+    width: 25px;
+  }
+  100% {
+    width: 0px;
+    top: 0;
+    left: 100px;
+  }
+}
+@keyframes moveAlongBorder2 {
+  0% {
+    top: 0;
+    width: 0;
+    right: calc(100% - 100px);
+  }
+  20%,
+  80% {
+    width: 25px;
+  }
+  100% {
+    width: 0;
+
+    top: 0;
+    right: 100px;
   }
 }
