--- a/styles/style.scss
+++ b/styles/style.scss
@@ -258,6 +258,7 @@
           top: 0;
           left: 50%;
           transform: translate(-50%, -50%);
+          width: 0;
         }
         &::after,
         &::before {
