--- a/styles/style.scss
+++ b/styles/style.scss
@@ -298,7 +298,7 @@
         .double-arrow {
           display: block;
           transform: scaleX(-1) translate(-50%, -50%);
-          animation: moveAlongBorder 5s 3s linear infinite;
+          animation: moveAlongBorder 5s linear infinite;
         }
       }
       > section:nth-child(odd) {
