--- a/styles/style.scss
+++ b/styles/style.scss
@@ -2,11 +2,15 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+
 }
 @property --p {
   syntax: "<percentage>";
   inherits: false;
   initial-value: 10%;
+}
+html,body {
+  scroll-behavior: smooth !important;
 }
 .cybersecurity-bootcamp {
   font-family: "Noto Sans Arabic", sans-serif;
@@ -14,7 +18,6 @@
   font-style: normal;
   font-variation-settings: "wdth" 100;
   width: 100%;
-
   .container {
     width: 100%;
     padding: 50px 10px;
@@ -170,6 +173,8 @@
     width: 100%;
     > .title {
       position: relative;
+      text-decoration: none;
+      display: block;
       h3 {
         background-color: #9a20aa;
         width: fit-content;
@@ -386,6 +391,7 @@
       > div:nth-child(2) {
         display: flex;
         flex-direction: column;
+        padding: 0 20px;
         h4 {
           text-align: center;
           font-size: 20px;
