--- a/styles/style.css
+++ b/styles/style.css
@@ -357,6 +357,8 @@ html, body {
 .cybersecurity-bootcamp main .register-details > div:nth-child(2) {
   display: flex;
   flex-direction: column;
+  gap: 20px;
+  align-items: center;
   padding: 0 20px;
 }
 .cybersecurity-bootcamp main .register-details > div:nth-child(2) h4 {
