--- a/styles/style.scss
+++ b/styles/style.scss
@@ -391,6 +391,8 @@ html,body {
       > div:nth-child(2) {
         display: flex;
         flex-direction: column;
+        gap: 20px;
+        align-items: center;
         padding: 0 20px;
         h4 {
           text-align: center;
